[tool.poetry]
name = "hp-gastritis-hms2-auxiliary"
version = "0.1.0"
description = "This project can reproduce the results in the paper, 'A two-tiered deep learning-based model for histologic diagnosis of Helicobacter gastritis'."
authors = ["Chi-Chung Chen <chenchc@aetherai.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyYAML = "^6.0"
numpy = "^1.22.3"
Pillow = "^9.0.1"
tqdm = "^4.63.1"
opencv-python = "^4.5.5"
hms2 = {git = "https://github.com/aetherAI/hms2.git", rev = "1.3.1r"}
lightgbm = "^3.3.2"
FLAML = "^1.0.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.13.1"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.poe.tasks]
install-torch = "python -m pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu113"
install-horovod.cmd = "python -m pip install horovod --no-cache-dir"
install-horovod.env = {HOROVOD_WITH_PYTORCH = "1"}
install = [
    "install-torch",
    "install-horovod"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
